# chip8

./: CMakeLists.txt
src/: machine.cpp  render.cpp  render.h
